especificar metodo http para ruta orders en config de seguridad y agregar metodo http patch como permitido en config de cors